@@ -24,7 +24,7 @@ namespace eval tcltest {
     # When the version number changes, be sure to update the pkgIndex.tcl file,
     # and the install directory in the Makefiles.  When the minor version
     # changes (new feature) be sure to update the man page as well.
-    variable Version 2.2.3
+    variable Version 2.2.4
 
     # Compatibility support for dumb variables defined in tcltest 1
     # Do not use these.  Call [package provide Tcl] and [info patchlevel]
@@ -1431,7 +1431,7 @@ proc tcltest::ProcessFlags {flagArray} {
 		    # but keep going
 		    if {[llength $moreOptions]} {
 			append msg ", "
-			append msg [join [lrange $moreOptions 0 end -1] ", "]
+			append msg [join [lrange $moreOptions 0 end-1] ", "]
 			append msg "or [lindex $moreOptions end]"
 		    }
 		    Warn $msg
