@@ -1,3 +1,9 @@
+2003-07-16  Don Porter  <dgp@users.sourceforge.net>
+
+        * library/tcltest/tcltest.tcl (ProcessFlags):   Corrected broken call
+        * library/tcltest/pkgIndex.tcl:                 to [lrange].  Bumped
+        to version 2.2.4. [Bug 772333]
+
 2003-07-15  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/dltest/pkga.c (Pkga_EqObjCmd): Fix typo
